# fontagent

./: .gitignore  DISCORD_HANDOFF_2026-04-03.md  MCP_INTEGRATIONS.md  NETWORK_RUNBOOK.md  PRODUCT_DIRECTION.md  README.md  REFERENCE_LEARNING_PLAN.md  pyproject.toml
.codex/skills/fontagent-specialist/: SKILL.md
examples/agent_workflows/: fontagent-specialist-prompt.md
examples/browser_tasks/: 1496.browser-download-task.json  1763.browser-download-task.json  maru-buri.browser-download-task.json  maruburi.browser-download-task.json
examples/mcp_configs/: codex.fontagent.json
fontagent/: cli.py  curated_candidates.py  db.py  discovery.py  font_cohorts.py  font_system.py  http_api.py  http_utils.py  installer.py  interviews.py  license_policy.py  mcp_server.py  models.py  noonnu.py  obsidian_export.py  official_sources.py  preview.py  project_bootstrap.py  reference_image.py  reference_intelligence.py  reference_packs.py  reference_vision.py  reference_web.py  repository.py  resolver.py  service.py  system_scan.py  template_bundle.py  typography_presets.py  use_cases.py
fontagent/font_identify/: __init__.py  detect.py  fingerprint.py  glyph_renderer.py  index.py  match.py  similar.py
fontagent/schemas/: typography-handoff.v1.schema.json
fontagent/seed/: fonts.json
fontagent_vault/: README.md
scripts/: validate_compose_posters.py
tests/: test_font_identify.py  test_http_api.py  test_mcp_server.py  test_official_sources.py  test_preview.py  test_service.py  test_typography_presets.py
tests/fixtures/noonnu/: listing.html  maru-buri.html  suit.html
(+1 files in other folders)
